--- a/src/styles.css
+++ b/src/styles.css
@@ -10,13 +10,15 @@ body {
 }
 
 #app {
-    padding: 100px 0;
+    margin: 100px 0;
+    padding: 10px;
+    box-shadow: -1px -6px 20px 17px #dad7d7;
 }
 .mount__header {
     padding: 25px 0;
     margin: auto;
     width: 100%;
-    border-bottom: 1px solid #dad7d7;
+    text-align: center;
 }
 
 .days__wrapper {
@@ -29,7 +31,6 @@ body {
 .day__item {
     width: 78px;
     height: 78px;
-    /*padding: 30px;*/
     overflow: hidden;
     cursor: pointer;
     text-align: center;
@@ -55,6 +56,7 @@ body {
 }
 .day__item-todo{
     padding: 0;
+    margin-top: 4px;
 }
 
 .day__item-todo li {
@@ -83,4 +85,12 @@ body {
 
 .day__item:hover {
     background-color: #bcbcbc;
+}
+/*TODO @Vlad clear styles and group rules*/
+.calendar__header {
+    display: flex;
+    border-bottom: 1px solid #dad7d7;
+}
+.nav {
+    cursor: pointer;
 }
