--- a/src/styles.css
+++ b/src/styles.css
@@ -24,19 +24,43 @@ body {
 .days__wrapper {
     display: flex;
     flex-wrap: wrap;
-    max-width: 500px;
+    max-width: 550px;
     position: relative;
-    padding-top: 25px;
 }
-.day__item {
-    width: 78px;
+
+.day__item, .day__item.empty {
+    transition: all .5s ease-in-out;
+    border: 1px solid #e8e8e8;
     height: 78px;
+}
+.day__item, .calendar__days ul li, .day__item.empty {
+    width: 78px;
     overflow: hidden;
     cursor: pointer;
     text-align: center;
-    transition: all .5s ease-in-out;
-    border: 1px solid #e8e8e8;
 }
+
+.current__day {
+    background-color: blue;
+}
+.day__item:nth-child(7n-1),.day__item:nth-child(7n),
+.calendar__days ul li:nth-child(6n),.calendar__days ul li:last-child {
+    border: 1px solid red;
+}
+.day__item.empty {
+    pointer-events: none;
+}
+.calendar__days ul{
+    display: flex;
+    padding: 0;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.calendar__days ul li {
+    padding: 5px 0;
+}
+
 .day__item.details {
     width: 100%;
     height: 100%;
@@ -94,3 +118,5 @@ body {
 .nav {
     cursor: pointer;
 }
+
+
